--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,10 +1,19 @@
-<h1>{{title}}</h1>
-<p>
-First Name is : {{firstName}}
-</p>
-<h1>
-Last Name is : {{lastName}}
-</h1>
-<app-message></app-message>
-<app-message></app-message>
-<app-message></app-message>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>{{title}}</h1>
+        </div>        
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <app-message></app-message>
+        </div>        
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <app-personal-detail></app-personal-detail>
+        </div>
+    </div>
+</div>
+
+
