--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container">    
     <div class="row">
         <div class="col-md-12">
             <h1>{{title}}</h1>
@@ -12,6 +12,14 @@
     <div class="row">
         <div class="col-md-6">
             <app-personal-detail></app-personal-detail>
+        </div>
+        <div class="col-md-6">
+            <app-education></app-education>
+        </div>
+    </div>    
+    <div class="row m-3">
+        <div class="col-md-12">
+            <app-friends></app-friends>
         </div>
     </div>
 </div>
